--- a/Cost Track/Podfile
+++ b/Cost Track/Podfile
@@ -7,6 +7,7 @@ target 'Cost Track' do
 
   # Pods for Cost Track
   pod ‘SwiftProtobuf’, '1.0.3'
+  pod 'GooglePlacePicker'
 
   target 'Cost TrackTests' do
     inherit! :search_paths
