Added image field in Entry.proto Can take photo and save image

--- a/Cost Track/Cost Track/Info.plist
+++ b/Cost Track/Cost Track/Info.plist
@@ -20,8 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Testtting</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is needed to select places for entires.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
